# brayden-ibi-api

./: .env.example  .env.test  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/core/: audit.py  auth.py  dependencies.py  permissions.py
app/events/: booking_events.py  compliance_events.py  handlers.py
app/middleware/: logging.py  request_id.py  security.py
app/models/: __init__.py  availability.py  base.py  booking.py  compliance.py  school.py  scr.py  timesheet.py  trust.py  user.py  user_assignment.py  verification.py  worker.py
app/repositories/: availability.py  base.py  booking.py  compliance_document.py  dbs_check.py  first_shift_verification.py  onboarding_note.py  rtw_check.py  school.py  timesheet.py  user.py  user_assignment.py  worker.py
app/routers/: api.py
app/routers/v1/: attendance.py  (+19 more)
app/schemas/: auth.py  availability.py  base.py  booking.py  compliance_document.py  dashboard.py  health.py  onboarding.py  safeguarding.py  school.py  scr.py  timesheet.py  user.py  verification.py  worker.py  worker_self.py
app/services/: attendance.py  availability.py  booking.py  booking_dashboard.py  compliance_dashboard.py  compliance_document.py  first_shift.py  hr_review.py  onboarding.py  safeguarding.py  scr.py  supabase_admin.py  timesheet.py  trust_settings.py  user_provisioning.py  worker_matching.py  worker_registration.py
app/shared/: constants.py  enums.py  exceptions.py  logging.py  pagination.py
migrations/: env.py
scripts/: seed_system_roles.py
tests/: conftest.py
(+30 files in other folders)
